# Lib_test_demo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dvp2OpenCV.cpp  Grap_Control_Demo.cpp  README.md  ShareMemory.cpp  Task_test.cpp  ibvs.cpp  img_transfer.cpp  jacobTest.cpp  main.cpp  main_Nosocket.cpp  myrobot.xml  rlmdl.xsd  safeCheck.cpp  sharedMemory_Receive.cpp  sharedMemory_Send.cpp  trajTest.cpp  visualTest.cpp  visual_servo_motion.cpp  vs_Low.cpp
data/: 8-3-13-27 angles.txt  8-3-13-27 moments.txt  8-3-13-27 vecs.txt
grap_tool/: grap_tool.project-DunDJa.~u  grap_tool.sln  zero_err_setfile.dlg
grap_tool/grap_tool/: TrialLicense.tclrs  grap_tool.tsproj  grap_tool.tsproj.bak
grap_tool/grap_tool/_Boot/: TargetDescription.xml
grap_tool/grap_tool/_Boot/TwinCAT RT (x64)/: CurrentConfig.tszip  CurrentConfig.xml
grap_tool/grap_tool/_Boot/TwinCAT RT (x64)/CurrentConfig/: plc.tpzip  plc2.tpzip
grap_tool/grap_tool/_Boot/TwinCAT RT (x64)/Plc/: Port_851.app  Port_851.cid  Port_851.crc  Port_851_boot.tizip  Port_852.app  Port_852.cid  Port_852.crc  Port_852_boot.tizip
grap_tool/grap_tool/plc/: PlcTask.TcTTO  plc.plcproj  plc.tmc
grap_tool/grap_tool/plc-MengnanY/: PlcTask.TcTTO  plc.plcproj
grap_tool/grap_tool/plc-MengnanY/DUTs/: PositionAxis.TcDUT  PositionAxis_Status.TcDUT
grap_tool/grap_tool/plc-MengnanY/POUs/: MAIN.TcPOU
grap_tool/grap_tool/plc/DUTs/: P_Axis_Rx.TcDUT  P_Axis_Tx.TcDUT  T_Axis_Rx.TcDUT  T_Axis_Tx.TcDUT
grap_tool/grap_tool/plc/POUs/: MAIN.TcPOU
grap_tool/grap_tool/plc/_CompileInfo/: 1CDF969A-4693-E8D9-92EF-9E90A5D1B13A.compileinfo  728D3674-54A3-8892-27AD-1DFD650AE8E7.compileinfo  B1218863-0A8F-4B01-6BCC-3DDC60584658.compileinfo
history_app/: Dvp2OpenCV.cpp  dataMonitor.cpp  jacobTest.cpp  main_Nosocket.cpp  trajTest.cpp  vs_Low.cpp
histroy_app/: trajTest.cpp
inc/: ADDRESS_DEFINE.h  DATA_STRUCT.h  DVPCamera.h  Data_Log.hpp  Driver.h  Multi_Process.h  ShareMemory.h  TASK.h  TcAdsAPI.h  TcAdsDef.h  Tc_Ads.h  TimerCounter.h  Transform.hpp  comSocket.h  driverSever.h  grap_action.h  mat.hpp  monitorData.h  motionDataTransform.hpp  pathInterpolation.h  robot.h  traj.hpp
inc/histroy/: mat.hpp
lib/: DVPCamera64.lib
plcProj/LIBPROJ/: LIBPROJ.project-DESKTOP-IA65GCL.~u  LIBPROJ.project.~u  LIBPROJ.sln
plcProj/LIBPROJ/LIBPROJ/: LIBPROJ.tsproj  LIBPROJ.tsproj.bak
plcProj/LIBPROJ/LIBPROJ/_Boot/TwinCAT RT (x64)/: CurrentConfig.tszip  CurrentConfig.xml
plcProj/LIBPROJ/LIBPROJ/_Boot/TwinCAT RT (x64)/CurrentConfig/: plc.tpzip
plcProj/LIBPROJ/LIBPROJ/_Boot/TwinCAT RT (x64)/Plc/: Port_851.app  Port_851.cid  Port_851.crc  Port_851_boot.tizip
plcProj/LIBPROJ/LIBPROJ/plc/: PlcTask.TcTTO  plc.plcproj  plc.tmc
plcProj/LIBPROJ/LIBPROJ/plc/DUTs/: Axis_Command.TcDUT  Axis_Status.TcDUT
plcProj/LIBPROJ/LIBPROJ/plc/POUs/: MAIN.TcPOU
plcProj/LIBPROJ/LIBPROJ/plc/_CompileInfo/: A56A83B6-E108-C09E-5E7D-BA870C76A9BF.compileinfo
plcProj/LIBPROJ/LIBPROJ/plc2/: plc2.tmc
plcProj/LIBPROJ/LIBPROJ/plc2/POUs/: MAIN.TcPOU
src/: Driver.cpp  Multi_Process.cpp  TASK.cpp  Tc_Ads.cpp  TimerCounter.cpp  comSocket.cpp  driverSever.cpp  grap_action.cpp  monitorData.cpp  pathInterpolation.cpp  robot.cpp
trajectory_files/: output_2.csv
